[tool.poetry]
name = "multistage"
version = "0.1.0"
description = "Layered LLM app."
authors = ["DrDavidL <92898146+DrDavidL@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
pandas = "^2.2.2"
streamlit = "^1.35.0"
embedchain = "^0.1.104"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
